--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-server.port=8081
+server.port=8083
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.datasource.url=jdbc:h2:mem:memDb;DB_CLOSE_DELAY=-1 
 sring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+#springfox.documentation.enabled=false
 
